[package]
name = "tollgate-merchant"
version = "0.1.0"
edition = "2021"

[dependencies]
cdk = "0.7.1"
hex = "0.4.3"
nostr-database = "0.39.0"
nostr-sdk = "0.39.0"
secp256k1 = "0.30.0"
serde_json = "1.0.139"

hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1.10.1"
serde = { version = "1.0.218", features = ["derive"] }
